add bg color for various section

--- a/main_page.html
+++ b/main_page.html
@@ -14,9 +14,9 @@
 <body>
 
     <header id="site_header">
-        <nav class="navbar bg-body-tertiary">
+        <nav class="navbar h-100">
             <div class="container-fluid">
-              <a class="navbar-brand colo">Welcome to Evendim</a>
+              <a class="navbar-brand colo"><i class="fa-solid fa-earth-europe"></i> Welcome to Evendim</a>
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
@@ -27,11 +27,15 @@
     <!-- /#site_header -->
     
     
-    <div id="wrapper">
-        <div class="sidebar"></div>
+    <div id="wrapper" class="d-flex">
+        <div class="sidebar d-flex">
+            Lorem
+        </div>
 
 
-        <main id="site_main"></main>
+        <main id="site_main" class="px-3 py-1">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id illo odit dolor quam deleniti, rem distinctio illum autem eos quae.
+        </main>
 
 
         <!-- /#site_main -->
