--- a/main_page.html
+++ b/main_page.html
@@ -18,8 +18,8 @@
             <div class="container-fluid">
                 <a class="navbar-brand colo"><i class="fa-solid fa-earth-europe"></i> Welcome to Evendim</a>
                 <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <input class="form-control me-2" type="search" placeholder="Cerca Pure" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Vai</button>
                 </form>
             </div>
         </nav>
