add comment for sidebar and fix overflow-y auto for main only

--- a/main_page.html
+++ b/main_page.html
@@ -44,6 +44,7 @@
                 </div>
             </div>
         </sidebar>
+        <!-- sidebar -->
 
 
         <main id="site_main" class="px-5 py-4 d-flex">
