add colored container as content placeholder

--- a/main_page.html
+++ b/main_page.html
@@ -56,6 +56,54 @@
                     reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
                     possimus nam autem excepturi.</p>
             </div>
+            <div class="intestation p-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            </div>
+            <div class="container_text p-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
+                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
+                    possimus nam autem excepturi.</p>
+            </div>
+            <div class="intestation p-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            </div>
+            <div class="container_text p-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
+                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
+                    possimus nam autem excepturi.</p>
+            </div>
+            <div class="intestation p-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            </div>
+            <div class="container_text p-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
+                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
+                    possimus nam autem excepturi.</p>
+            </div>
+            <div class="intestation p-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            </div>
+            <div class="container_text p-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
+                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
+                    possimus nam autem excepturi.</p>
+            </div>
+            <div class="intestation p-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            </div>
+            <div class="container_text p-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
+                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
+                    possimus nam autem excepturi.</p>
+            </div>
+            <div class="intestation p-2">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            </div>
+            <div class="container_text p-2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
+                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
+                    possimus nam autem excepturi.</p>
+            </div>
         </main>
 
 
