edit icon in sidebar and font size of navbar-bramnd

--- a/main_page.html
+++ b/main_page.html
@@ -31,16 +31,20 @@
         <sidebar class="sidebar d-flex">
             <div class="top-aside d-flex ">
                 <div class="d-flex p-3 w-100">
-                    <i class="fa-solid fa-house"></i>
-                    <span class="d-none d-lg-block">Home</span>
+                    <a href=""><i class="fa-solid fa-house"></i></a>
+                    <a href=""><span class="d-none d-lg-block">Home</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <i class="fa-solid fa-chart-simple"></i>
-                    <span class="d-none d-lg-block">Stats</span>
+                    <a href=""><i class="fa-solid fa-user-ninja"></i></a>
+                    <a href=""><span class="d-none d-lg-block">Personaggi</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <i class="fa-solid fa-signal"></i>
-                    <span class="d-none d-lg-block">Signals</span>
+                    <a href=""><i class="fa-solid fa-scroll"></i></a>
+                    <a href=""><span class="d-none d-lg-block">Storia</span></a>
+                </div>
+                <div class="d-flex p-3 w-100">
+                    <a href=""><i class="fa-solid fa-book"></i></a>
+                    <a href=""><span class="d-none d-lg-block"> Libri</span></a>
                 </div>
             </div>
         </sidebar>
