--- a/main_page.html
+++ b/main_page.html
@@ -16,7 +16,7 @@
     <header id="site_header">
         <nav class="navbar h-100">
             <div class="container-fluid">
-                <a class="navbar-brand colo"><i class="fa-solid fa-earth-europe"></i> Welcome to Evendim</a>
+                <a class="navbar-brand colo d-flex"><i class="fa-solid fa-earth-europe"></i> Welcome to Evendim</a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Cerca Pure" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Vai</button>
@@ -52,62 +52,79 @@
 
 
         <main id="site_main" class="px-5 py-4 d-flex">
-            <div class="intestation p-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            <div class="intestation p-2 mt-1">
+                <h4>Introduzione</h4>
             </div>
             <div class="container_text p-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
-                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
-                    possimus nam autem excepturi.</p>
+                <p class="welcome">
+                    Un caloroso benvenuto a tutti gli avventurieri che desiderano immergersi nella meravigliosa
+                    ambientazione di Evendim. Sulle minaccie che infestano il continente il saggio profeta Kenopodio
+                    una volta scrisse: <em>"I saggi conoscono le vie sicure, gli stolti imboccano tutti i
+                        sentieri"</em>, per coloro che sono cauti e riflessivi i
+                    pericoli di
+                    Evendim saranno una sfida, una prova per migliorare se stessi, ma per coloro che non lo sono
+                    saranno
+                    una condanna rapida e definitiva. invitiamo pertanto alla cautela nel cimentarsi in questa
+                    ambientazione, per il resto vi augriamo di creare meravigliose esperienze e forgiare duraturi legami
+                    di amicizia e amore in questa terra di miti e leggende viventi!
+                </p>
             </div>
-            <div class="intestation p-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
-            </div>
-            <div class="container_text p-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
-                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
-                    possimus nam autem excepturi.</p>
-            </div>
-            <div class="intestation p-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
-            </div>
-            <div class="container_text p-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
-                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
-                    possimus nam autem excepturi.</p>
-            </div>
-            <div class="intestation p-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            <div class="intestation p-2 mt-5">
+                <h2>Panoramica su Evendim</h2>
             </div>
             <div class="container_text p-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
-                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
-                    possimus nam autem excepturi.</p>
+                <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
+                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità</p>
             </div>
-            <div class="intestation p-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
-            </div>
-            <div class="container_text p-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
-                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
-                    possimus nam autem excepturi.</p>
-            </div>
-            <div class="intestation p-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            <div class="intestation p-2 mt-1">
+                <h4>Introduzione</h4>
             </div>
             <div class="container_text p-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
-                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
-                    possimus nam autem excepturi.</p>
+                <p class="welcome">
+                    Un caloroso benvenuto a tutti gli avventurieri che desiderano immergersi nella meravigliosa
+                    ambientazione di Evendim. Sulle minaccie che infestano il continente il saggio profeta Kenopodio
+                    una volta scrisse: <em>"I saggi conoscono le vie sicure, gli stolti imboccano tutti i
+                        sentieri"</em>, per coloro che sono cauti e riflessivi i
+                    pericoli di
+                    Evendim saranno una sfida, una prova per migliorare se stessi, ma per coloro che non lo sono
+                    saranno
+                    una condanna rapida e definitiva. invitiamo pertanto alla cautela nel cimentarsi in questa
+                    ambientazione, per il resto vi augriamo di creare meravigliose esperienze e forgiare duraturi legami
+                    di amicizia e amore in questa terra di miti e leggende viventi!
+                </p>
             </div>
-            <div class="intestation p-2">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ex.</p>
+            <div class="intestation p-2 mt-5">
+                <h2>Panoramica su Evendim</h2>
             </div>
             <div class="container_text p-2">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quam neque veritatis dolor
-                    reprehenderit facilis saepe non natus quos eaque et voluptate consequuntur ea tempora, beatae
-                    possimus nam autem excepturi.</p>
+                <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
+                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità</p>
             </div>
+            <div class="intestation p-2 mt-1">
+                <h4>Introduzione</h4>
+            </div>
+            <div class="container_text p-2">
+                <p class="welcome">
+                    Un caloroso benvenuto a tutti gli avventurieri che desiderano immergersi nella meravigliosa
+                    ambientazione di Evendim. Sulle minaccie che infestano il continente il saggio profeta Kenopodio
+                    una volta scrisse: <em>"I saggi conoscono le vie sicure, gli stolti imboccano tutti i
+                        sentieri"</em>, per coloro che sono cauti e riflessivi i
+                    pericoli di
+                    Evendim saranno una sfida, una prova per migliorare se stessi, ma per coloro che non lo sono
+                    saranno
+                    una condanna rapida e definitiva. invitiamo pertanto alla cautela nel cimentarsi in questa
+                    ambientazione, per il resto vi augriamo di creare meravigliose esperienze e forgiare duraturi legami
+                    di amicizia e amore in questa terra di miti e leggende viventi!
+                </p>
+            </div>
+            <div class="intestation p-2 mt-5">
+                <h2>Panoramica su Evendim</h2>
+            </div>
+            <div class="container_text p-2">
+                <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
+                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità</p>
+            </div>
+
         </main>
 
 
