add another icon in sidebar

--- a/main_page.html
+++ b/main_page.html
@@ -44,7 +44,11 @@
                 </div>
                 <div class="d-flex p-3 w-100">
                     <a href=""><i class="fa-solid fa-book"></i></a>
-                    <a href=""><span class="d-none d-lg-block"> Libri</span></a>
+                    <a href=""><span class="d-none d-lg-block"> Testi</span></a>
+                </div>
+                <div class="d-flex p-3 w-100">
+                    <a href=""><i class="fa-solid fa-map"></i></a>
+                    <a href=""><span class="d-none d-lg-block"> Mappe</span></a>
                 </div>
             </div>
         </sidebar>
@@ -52,54 +56,6 @@
 
 
         <main id="site_main" class="px-5 py-4 d-flex">
-            <div class="intestation p-2 mt-1">
-                <h4>Introduzione</h4>
-            </div>
-            <div class="container_text p-2">
-                <p class="welcome">
-                    Un caloroso benvenuto a tutti gli avventurieri che desiderano immergersi nella meravigliosa
-                    ambientazione di Evendim. Sulle minaccie che infestano il continente il saggio profeta Kenopodio
-                    una volta scrisse: <em>"I saggi conoscono le vie sicure, gli stolti imboccano tutti i
-                        sentieri"</em>, per coloro che sono cauti e riflessivi i
-                    pericoli di
-                    Evendim saranno una sfida, una prova per migliorare se stessi, ma per coloro che non lo sono
-                    saranno
-                    una condanna rapida e definitiva. invitiamo pertanto alla cautela nel cimentarsi in questa
-                    ambientazione, per il resto vi augriamo di creare meravigliose esperienze e forgiare duraturi legami
-                    di amicizia e amore in questa terra di miti e leggende viventi!
-                </p>
-            </div>
-            <div class="intestation p-2 mt-5">
-                <h2>Panoramica su Evendim</h2>
-            </div>
-            <div class="container_text p-2">
-                <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
-                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità</p>
-            </div>
-            <div class="intestation p-2 mt-1">
-                <h4>Introduzione</h4>
-            </div>
-            <div class="container_text p-2">
-                <p class="welcome">
-                    Un caloroso benvenuto a tutti gli avventurieri che desiderano immergersi nella meravigliosa
-                    ambientazione di Evendim. Sulle minaccie che infestano il continente il saggio profeta Kenopodio
-                    una volta scrisse: <em>"I saggi conoscono le vie sicure, gli stolti imboccano tutti i
-                        sentieri"</em>, per coloro che sono cauti e riflessivi i
-                    pericoli di
-                    Evendim saranno una sfida, una prova per migliorare se stessi, ma per coloro che non lo sono
-                    saranno
-                    una condanna rapida e definitiva. invitiamo pertanto alla cautela nel cimentarsi in questa
-                    ambientazione, per il resto vi augriamo di creare meravigliose esperienze e forgiare duraturi legami
-                    di amicizia e amore in questa terra di miti e leggende viventi!
-                </p>
-            </div>
-            <div class="intestation p-2 mt-5">
-                <h2>Panoramica su Evendim</h2>
-            </div>
-            <div class="container_text p-2">
-                <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
-                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità</p>
-            </div>
             <div class="intestation p-2 mt-1">
                 <h4>Introduzione</h4>
             </div>
