edit text contaner in main

--- a/main_page.html
+++ b/main_page.html
@@ -16,7 +16,8 @@
     <header id="site_header">
         <nav class="navbar h-100">
             <div class="container-fluid">
-                <a class="navbar-brand colo d-flex"><i class="fa-solid fa-earth-europe"></i> Welcome to Evendim</a>
+                <a class="navbar-brand colo d-flex px-2"><i class="fa-solid fa-earth-europe d-none d-sm-block"></i>
+                    Welcome to Evendim</a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Cerca Pure" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Vai</button>
@@ -57,7 +58,7 @@
 
         <main id="site_main" class="px-5 py-4 d-flex">
             <div class="intestation p-2 mt-1">
-                <h4>Introduzione</h4>
+                <h4><strong>Introduzione</strong></h4>
             </div>
             <div class="container_text p-2">
                 <p class="welcome">
@@ -74,11 +75,49 @@
                 </p>
             </div>
             <div class="intestation p-2 mt-5">
-                <h2>Panoramica su Evendim</h2>
+                <h2><strong>Panoramica su Evendim</strong></h2>
             </div>
             <div class="container_text p-2">
                 <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
-                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità</p>
+                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis optio quibusdam aperiam
+                    laboriosam sed voluptate impedit totam, placeat voluptatum porro laborum praesentium libero quas
+                    eaque nesciunt enim cumque maiores ducimus beatae sunt possimus? Distinctio nesciunt quibusdam
+                    consequatur autem consectetur fugit aut esse commodi ad quas ab dignissimos facilis obcaecati dicta
+                    suscipit impedit nihil, voluptas amet. Deserunt, porro modi. Explicabo sit obcaecati iure facilis
+                    provident a odio impedit praesentium fugiat, suscipit debitis numquam odit rem magnam perspiciatis
+                    tempore modi consequuntur hic exercitationem fuga maxime maiores? Suscipit vitae ut fugit,
+                    repudiandae ipsa dolor numquam unde modi qui accusamus veritatis dolorem aspernatur!</p>
+            </div>
+            <div class="intestation p-2 mt-5">
+                <h2><strong>Panoramica su Evendim</strong></h2>
+            </div>
+            <div class="container_text p-2">
+                <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
+                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis optio quibusdam aperiam
+                    laboriosam sed voluptate impedit totam, placeat voluptatum porro laborum praesentium libero quas
+                    eaque nesciunt enim cumque maiores ducimus beatae sunt possimus? Distinctio nesciunt quibusdam
+                    consequatur autem consectetur fugit aut esse commodi ad quas ab dignissimos facilis obcaecati dicta
+                    suscipit impedit nihil, voluptas amet. Deserunt, porro modi. Explicabo sit obcaecati iure facilis
+                    provident a odio impedit praesentium fugiat, suscipit debitis numquam odit rem magnam perspiciatis
+                    tempore modi consequuntur hic exercitationem fuga maxime maiores? Suscipit vitae ut fugit,
+                    repudiandae ipsa dolor numquam unde modi qui accusamus veritatis dolorem aspernatur!</p>
+            </div>
+            <div class="intestation p-2 mt-5">
+                <h2><strong>Panoramica su Evendim</strong></h2>
+            </div>
+            <div class="container_text p-2">
+                <p>Cominciamo a dare un occhiata alla terra nella quale stiamo per avventurarci, il continente di
+                    Evendim è molto vasto e antico, nella sua storia è stato teatro di scontri tra demoni e divinità.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt officiis optio quibusdam aperiam
+                    laboriosam sed voluptate impedit totam, placeat voluptatum porro laborum praesentium libero quas
+                    eaque nesciunt enim cumque maiores ducimus beatae sunt possimus? Distinctio nesciunt quibusdam
+                    consequatur autem consectetur fugit aut esse commodi ad quas ab dignissimos facilis obcaecati dicta
+                    suscipit impedit nihil, voluptas amet. Deserunt, porro modi. Explicabo sit obcaecati iure facilis
+                    provident a odio impedit praesentium fugiat, suscipit debitis numquam odit rem magnam perspiciatis
+                    tempore modi consequuntur hic exercitationem fuga maxime maiores? Suscipit vitae ut fugit,
+                    repudiandae ipsa dolor numquam unde modi qui accusamus veritatis dolorem aspernatur!</p>
             </div>
 
         </main>
