edit secondary page to character page, import layout modification trough pages

--- a/main_page.html
+++ b/main_page.html
@@ -32,12 +32,12 @@
         <sidebar class="sidebar d-flex">
             <div class="top-aside d-flex ">
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-house"></i></a>
-                    <a href=""><span class="d-none d-lg-block">Home</span></a>
+                    <a href="./main_page.html"><i class="fa-solid fa-house"></i></a>
+                    <a href="./main_page.html"><span class="d-none d-lg-block">Home</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-user-ninja"></i></a>
-                    <a href=""><span class="d-none d-lg-block">Personaggi</span></a>
+                    <a href="./character_page.html"><i class="fa-solid fa-user-ninja"></i></a>
+                    <a href="./character_page.html"><span class="d-none d-lg-block">Personaggi</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
                     <a href=""><i class="fa-solid fa-scroll"></i></a>
@@ -58,7 +58,7 @@
 
         <main id="site_main" class="px-5 py-4 d-flex">
             <div class="intestation p-2 mt-1">
-                <h4><strong>Introduzione</strong></h4>
+                <h3><strong>Introduzione</strong></h3>
             </div>
             <div class="container_text p-2">
                 <p class="welcome">
