--- a/character_page.html
+++ b/character_page.html
@@ -44,6 +44,10 @@
                     <a href=""><span class="d-none d-lg-block">Storia</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
+                    <a href=""><i class="fa-solid fa-wand-sparkles"></i></a>
+                    <a href=""><span class="d-none d-lg-block">Magia e Scienza</span></a>
+                </div>
+                <div class="d-flex p-3 w-100">
                     <a href=""><i class="fa-solid fa-book"></i></a>
                     <a href=""><span class="d-none d-lg-block"> Testi</span></a>
                 </div>
