add destination link to a navbar brand

--- a/main_page.html
+++ b/main_page.html
@@ -16,7 +16,7 @@
     <header id="site_header">
         <nav class="navbar h-100">
             <div class="container-fluid">
-                <a class="navbar-brand colo d-flex px-2"><i class="fa-solid fa-earth-europe d-none d-sm-block"></i>
+                <a href="./main_page.html" class="navbar-brand colo d-flex px-2"><i class="fa-solid fa-earth-europe d-none d-sm-block"></i>
                     Welcome to Evendim</a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Cerca Pure" aria-label="Search">
