--- a/main_page.html
+++ b/main_page.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="d-flex p-3 w-100">
                     <a href=""><i class="fa-solid fa-book"></i></a>
-                    <a href=""><span class="d-none d-lg-block"> Testi</span></a>
+                    <a href=""><span class="d-none d-lg-block"> Biblioteca</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
                     <a href=""><i class="fa-solid fa-map"></i></a>
