--- a/main_page.html
+++ b/main_page.html
@@ -40,20 +40,20 @@
                     <a href="./character_page.html"><span class="d-none d-lg-block">Personaggi</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-scroll"></i></a>
-                    <a href=""><span class="d-none d-lg-block">Storia</span></a>
+                    <a href="./history.html"><i class="fa-solid fa-scroll"></i></a>
+                    <a href="./history.html"><span class="d-none d-lg-block">Storia</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-wand-sparkles"></i></a>
-                    <a href=""><span class="d-none d-lg-block">Magia e Scienza</span></a>
+                    <a href="./magic_and_science.html"><i class="fa-solid fa-wand-sparkles"></i></a>
+                    <a href="./magic_and_science.html"><span class="d-none d-lg-block">Magia e Scienza</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-book"></i></a>
-                    <a href=""><span class="d-none d-lg-block"> Biblioteca</span></a>
+                    <a href="./library.html"><i class="fa-solid fa-book"></i></a>
+                    <a href="./library.html"><span class="d-none d-lg-block"> Biblioteca</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-map"></i></a>
-                    <a href=""><span class="d-none d-lg-block"> Mappe</span></a>
+                    <a href="./maps.html"><i class="fa-solid fa-map"></i></a>
+                    <a href="./maps.html"><span class="d-none d-lg-block"> Mappe</span></a>
                 </div>
             </div>
         </sidebar>
