--- a/library.html
+++ b/library.html
@@ -16,7 +16,8 @@
     <header id="site_header">
         <nav class="navbar h-100">
             <div class="container-fluid">
-                <a  href="./main_page.html" class="navbar-brand colo d-flex px-2"><i class="fa-solid fa-earth-europe d-none d-sm-block"></i>
+                <a href="./main_page.html" class="navbar-brand colo d-flex px-2"><i
+                        class="fa-solid fa-earth-europe d-none d-sm-block"></i>
                     Welcome to Evendim</a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Cerca Pure" aria-label="Search">
@@ -66,10 +67,8 @@
             </div>
             <div class="container_text p-2">
                 <p class="welcome">
-                    In questa sezione parleremo del gruppo di aventurieri che per primo ha affrontato le insidiose trame
-                    di Evendim e ne è uscito viovo, chi piu chi meno ovviamente. Questa masnada di scellerati
-                    combinaguai ha segnato la storia del continente in svariati modi, basta pensare alla calamità di
-                    Midtus oppure all'orrore cremisi di Opal che alcune malelingue hanno loro attribuito
+                    In questa sezione sarà possibili consultare testi e opere letterarie scritte nei secoli dai piu
+                    dotti eruditi di Evendim
                 </p>
             </div>
         </main>
