edit sidebar in various pages

--- a/character_page.html
+++ b/character_page.html
@@ -16,7 +16,8 @@
     <header id="site_header">
         <nav class="navbar h-100">
             <div class="container-fluid">
-                <a  href="./main_page.html" class="navbar-brand colo d-flex px-2"><i class="fa-solid fa-earth-europe d-none d-sm-block"></i>
+                <a href="./main_page.html" class="navbar-brand colo d-flex px-2"><i
+                        class="fa-solid fa-earth-europe d-none d-sm-block"></i>
                     Welcome to Evendim</a>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Cerca Pure" aria-label="Search">
@@ -40,20 +41,20 @@
                     <a href="./character_page.html"><span class="d-none d-lg-block">Personaggi</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-scroll"></i></a>
-                    <a href=""><span class="d-none d-lg-block">Storia</span></a>
+                    <a href="./history.html"><i class="fa-solid fa-scroll"></i></a>
+                    <a href="./history.html"><span class="d-none d-lg-block">Storia</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-wand-sparkles"></i></a>
-                    <a href=""><span class="d-none d-lg-block">Magia e Scienza</span></a>
+                    <a href="./magic_and_science.html"><i class="fa-solid fa-wand-sparkles"></i></a>
+                    <a href="./magic_and_science.html"><span class="d-none d-lg-block">Magia e Scienza</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-book"></i></a>
-                    <a href=""><span class="d-none d-lg-block"> Biblioteca</span></a>
+                    <a href="./library.html"><i class="fa-solid fa-book"></i></a>
+                    <a href="./library.html"><span class="d-none d-lg-block"> Biblioteca</span></a>
                 </div>
                 <div class="d-flex p-3 w-100">
-                    <a href=""><i class="fa-solid fa-map"></i></a>
-                    <a href=""><span class="d-none d-lg-block"> Mappe</span></a>
+                    <a href="./maps.html"><i class="fa-solid fa-map"></i></a>
+                    <a href="./maps.html"><span class="d-none d-lg-block"> Mappe</span></a>
                 </div>
             </div>
         </sidebar>
@@ -70,6 +71,11 @@
                     di Evendim e ne è uscito viovo, chi piu chi meno ovviamente. Questa masnada di scellerati
                     combinaguai ha segnato la storia del continente in svariati modi, basta pensare alla calamità di
                     Midtus oppure all'orrore cremisi di Opal che alcune malelingue hanno loro attribuito
+                </p>
+                <p class="py-2">
+                    Dobbiamo anche precisare che questo variegato gruppo nel corso degli anni di attività ha avuto
+                    diversi nomi e ha visto passare molti membri alcuni dei quali sono morti tragicamente mentre altri
+                    hanno lasciato la squadra di propria iniziativa
                 </p>
             </div>
         </main>
