--- a/magic_and_science.html
+++ b/magic_and_science.html
@@ -70,6 +70,34 @@
                     In questa sezione vedremo le diverse forme di magia e discipline scentifiche che sono operate dai
                     saggi di evendim
                 </p>
+                <p>I vari rami della magia e delle discipline associate si possono dividere in diversi sottotipi</p>
+                <ul>
+                    <li>
+                        <a href="">Magia Arcana:</a> che manipola l'energia dell'immaterium ed è spesso utilizzata da maghi bardi e stregoni
+                    </li>
+                    <li>
+                        <a href="">Magia Divina:</a> energia donata dalle divinità ai loro adepti, spesso utilizzata da chierici e paladini
+                    </li>
+                    <li>
+                        <a href="">Magia Esoterica:</a> un sottotipo di magia divina quando questa è conferita da entità esterne che però non sono divinità come semidei, demoni e diavoli
+                    </li>
+                    <li>
+                        <a href="">Magia Naturale:</a> ottenuta dall'armonizzazione con le forze naturali e utilizzata da druidi e ranger
+                    </li>
+                    <li>
+                        <a href="">Magia profetica:</a> questo tipo di magia non è prerogativa di nessuna professione è un dono innato o ottenuto tramite sacrificio
+                    </li>
+                    <li>
+                        <a href="">Ki:</a> Simile all'energia naturale è il flusso di energia vitale che scorre in tutte le cose ed è utilizzata dai monaci
+                    </li>
+                    <li>
+                        <a href="">Arte dele formazioni:</a> un'avanzata forma di magia arcana ma imparabile da chiunque ci si applichi, prevede il disegno di complesse strutture arcane per usare la magia su larga scala
+                    </li>
+                    
+                    <li>
+                        <a href="">Arte alchemica:</a> lo studio di erbe e edicamenti naturali che miscelati possono produrre molti effetti diversi, spesso i maghi sono ottimi alchimisti
+                    </li>
+                </ul>
             </div>
         </main>
 
