add accordion in magic section

--- a/library.html
+++ b/library.html
@@ -68,7 +68,8 @@
             <div class="container_text p-2">
                 <p class="welcome">
                     In questa sezione sarà possibili consultare testi e opere letterarie scritte nei secoli dai piu
-                    dotti eruditi di Evendim
+                    dotti eruditi di Evendim, antiche pergamene e tomi perduti nel tempo raccolti nelle meravigtliose
+                    bibliotece della accademie qui sono a vostra disposizione
                 </p>
             </div>
         </main>
