--- a/magic_and_science.html
+++ b/magic_and_science.html
@@ -111,17 +111,63 @@
             <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
                             data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                             Magia arcana
                         </button>
                     </h2>
-                    <div id="flush-collapseOne" class="accordion-collapse collapse"
-                        data-bs-parent="#accordionFlushExample">
-                        <div class="accordion-body">La forma di magia più nota e conosciuta, spesso scambiata dai
-                            sempliciotti come forma di magia unica</div>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <p>La forma di magia più nota e conosciuta, spesso scambiata dai
+                                sempliciotti come l'unica forma di magia esistente
+                            </p>
+                            <p>
+                                La magia arcana di Evendim fa leva su una struttura nota come intreccio, questa
+                                ragnatela di magia ricopre l'intero mondo e permette ai maghi di attingere alle forze
+                                arcane per lanciare i loro incantesimi
+                            </p>
+                        </div>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Magia divina
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <p>La magia divina, differisce da quella arcana in quanto viene canalizzata attraverso
+                                le divinità o forze spirituali.
+                            </p>
+                            <p>
+                                I chierici e i paladini sono tra i principali utilizzatori di magia divina, ottenendo
+                                i loro poteri direttamente dalle loro divinità.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            Magia naturale
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <p>La magia naturale è intrecciata con le forze della natura stessa.
+                            </p>
+                            <p>
+                                I druidi e i ranger sono spesso praticanti di questa forma di magia, ottenendo i loro
+                                poteri dalle foreste, dai fiumi e dalla terra stessa.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
 
 
