--- a/magic_and_science.html
+++ b/magic_and_science.html
@@ -97,11 +97,15 @@
                         le cose ed è utilizzata dai monaci
                     </li>
                     <li>
-                        <a href="">Arte dele formazioni:</a> un'avanzata forma di magia arcana ma imparabile da chiunque
+                        <a href="">Maledizioni:</a> un sottotipo di sortilegio arcano volto speficatamente al
+                        danneggiamento degli individui attraverso marchi o malocchi
+                    </li>
+                    <li>
+                        <a href="">Arte delle formazioni:</a> un'avanzata forma di magia arcana ma imparabile da
+                        chiunque
                         ci si applichi, prevede il disegno di complesse strutture arcane per usare la magia su larga
                         scala
                     </li>
-
                     <li>
                         <a href="">Arte alchemica:</a> lo studio di erbe e edicamenti naturali che miscelati possono
                         produrre molti effetti diversi, spesso i maghi sono ottimi alchimisti
